force-app/main/default/objects/Trigger_Exception_Log__c/Trigger_Exception_Log__c.object-meta.xml
<CustomObject>
    <description>트리거 에러 관리 오브젝트</description>
    <label>Trigger Exception Log</label>
    <nameField>
        <displayFormat>TEL-{000000}</displayFormat>
        <label>Trigger Exception Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Trigger Exception Log</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>