force-app/main/default/objects/Trigger_Exception_Log__c/fields/ExceptionType__c.field-meta.xml
<CustomField>
    <fullName>ExceptionType__c</fullName>
    <description>트리거 에러 타입</description>
    <label>Exception Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>