force-app/main/default/objects/Trigger_Exception_Log__c/fields/TriggerHandlerName__c.field-meta.xml
<CustomField>
    <fullName>TriggerHandlerName__c</fullName>
    <description>트리거 핸들러 이름</description>
    <label>Trigger Handler Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>